// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`set amount button should match styling of set amount button type 50% 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="50%_amount_button"
>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
  >
    50%
  </Text>
</View>
`;

exports[`set amount button should match styling of set amount button type MAX 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "opacity": 1,
    }
  }
  testID="MAX_amount_button"
>
  <Text
    style={
      [
        {},
        [
          {},
          {},
        ],
      ]
    }
  >
    MAX
  </Text>
</View>
`;
